--- a/client/style.css
+++ b/client/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .landingTitle h2{
-    margin-top: 10vh;
+    margin-top: 5vh;
     font-family: 'Source Code Pro', monospace;
     color: white;
     text-shadow: 2px 2px 2px black;
@@ -20,25 +20,54 @@ body {
     font-size: 56px;
 }
 .searchContainer {
-    margin-top: 8vh;
+    margin: 4vh auto;
 }
 .mapContainer {
-    margin: 2% 5% 0 5%;
+    margin: 2% auto 0 auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     border: 1px solid black;
-    height: 65vh;
-    width: 90%;
+    height: 40vh;
+    width: 90vw;
 }
 
-#map {
-	height: 100%;
-	width: 100%;
+.mainMap {
+    width: 100%;
+    height: 100%;
+    border: 1px solid blue;
 }
-.wrapper {
-	position: relative;
-    width: 50vw;
-    height: 50vh;
-    margin: 10px auto;
+
+.streetViewContainer {
+    margin-top: 2vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    border: 1px solid blue;
+    height: 28vh;
+    width: 100vw;
+}
+
+.streetMap {
+    width: 33%;
+    height: 100%;
+    border: 1px solid orange;
+}
+
+#infowindow-content .title {
+    font-weight: bold;
+  }
+
+  #infowindow-content {
+    display: none;
+  }
+
+@media only screen and (max-width: 375px) and (max-height : 667px) {
+    .streetViewContainer {
+        height: 80vh;
+    }
+    .streetMap {
+        width: 100%;
+        height: 33%;
+    }
 }
