--- a/client/style.css
+++ b/client/style.css
@@ -27,7 +27,6 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    border: 1px solid black;
     height: 40vh;
     width: 90vw;
 }
@@ -35,7 +34,6 @@ body {
 .mainMap {
     width: 100%;
     height: 100%;
-    border: 1px solid blue;
 }
 
 .streetViewContainer {
@@ -56,11 +54,22 @@ body {
 
 #infowindow-content .title {
     font-weight: bold;
-  }
+}
 
-  #infowindow-content {
+#infowindow-content {
     display: none;
-  }
+}
+
+#description {
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+#place-name, #place-address {
+    font-size: 10px;
+    color: black;
+}
 
 @media only screen and (max-width: 375px) and (max-height : 667px) {
     .streetViewContainer {
