--- a/client/style.css
+++ b/client/style.css
@@ -79,6 +79,123 @@ body {
         height: 33%;
     }
 }
-/* #pano1, #pano2, #pano3 {
-    display: hidd
-} */
+
+/* Modal Content */
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+  }
+
+  .mapModalContainer {
+      height: 80vh;
+      margin: auto;
+  }
+  
+  .modal_content {
+    width: 600px;
+  }
+  
+  .modal-dialog {
+    min-width: 60%;
+  }
+  
+  .modal-body {
+    padding: 0 5%;
+    padding-bottom: 5%;
+  }
+  
+  .modalImage {
+    max-width: 100%;
+  }
+  
+  h2.modal-title {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 33px;
+    color: #38E6D8;
+  }
+  
+  h4.links {
+    text-align: center;
+    font-size: 18px;  
+  }
+  
+  div.modal-body>h4>a.live, div.modal-body>h4>a.github {
+    color: gray;
+  }
+  
+  h4>a:hover {
+    text-decoration: underline;
+  }
+  
+  div.modal-body>p {
+    font-size: 1.2em;
+  }
+  
+  .description p {
+    line-height: 1.3;
+    margin: 15px 0;
+    text-align: center;
+  }
+  
+  .modal-header {
+    border-bottom: 0px solid #ffffff;
+    display: block;
+  }
+  
+  .close {
+    font-size: 22px;
+  }
+
+/* Slider design */
+.slidecontainer {
+    width: 80%; /* Width of the outside container */
+    margin: 0 auto;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;   
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.signature {
+    font-size: 12px;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
