--- a/client/style.css
+++ b/client/style.css
@@ -19,9 +19,11 @@ body {
     text-align: center;
     font-size: 56px;
 }
+
 .searchContainer {
     margin: 4vh auto;
 }
+
 .mapContainer {
     margin: 2% auto 0 auto;
     display: flex;
@@ -69,6 +71,8 @@ body {
     color: black;
 }
 
+/* Media Query for Iphone 6/7/8 */
+
 @media only screen and (max-width: 375px) and (max-height : 667px) {
     .streetViewContainer {
         height: 70vh;
@@ -95,66 +99,27 @@ body {
     outline: 0;
   }
 
-  .mapModalContainer {
-      height: 80vh;
-      margin: auto;
-  }
-  
-  .modal_content {
-    width: 600px;
-  }
-  
-  .modal-dialog {
-    min-width: 60%;
-  }
-  
-  .modal-body {
-    padding: 0 5%;
-    padding-bottom: 5%;
-  }
-  
-  .modalImage {
-    max-width: 100%;
-  }
-  
-  h2.modal-title {
-    text-align: center;
-    text-transform: capitalize;
-    font-size: 33px;
-    color: #38E6D8;
-  }
-  
-  h4.links {
-    text-align: center;
-    font-size: 18px;  
-  }
-  
-  div.modal-body>h4>a.live, div.modal-body>h4>a.github {
-    color: gray;
-  }
-  
-  h4>a:hover {
-    text-decoration: underline;
-  }
-  
-  div.modal-body>p {
-    font-size: 1.2em;
-  }
-  
-  .description p {
-    line-height: 1.3;
-    margin: 15px 0;
-    text-align: center;
-  }
-  
-  .modal-header {
-    border-bottom: 0px solid #ffffff;
-    display: block;
-  }
-  
-  .close {
+.mapModalContainer {
+    height: 80vh;
+    margin: auto;
+}
+
+.modal_content {
+width: 600px;
+}
+
+.modal-dialog {
+min-width: 60%;
+}
+
+.modal-body {
+padding: 0 5%;
+padding-bottom: 5%;
+}
+
+.close {
     font-size: 22px;
-  }
+}
 
 /* Slider design */
 .slidecontainer {
@@ -193,9 +158,10 @@ body {
 }
 
 .signature {
-    font-size: 12px;
     color: white;
     position: absolute;
     top: 0;
     right: 0;
+    height: 100px;
+    width: 100px;
 }
